# serializer version: 1
# name: test_findings_json_is_locked_by_snapshot[bat_star-bat-star-cut.svg]
  dict({
    'content_hash': '0f7a670a7aeb86ed02766a0f4b387d7fd5663043ab1c12b4d015aaa64be00186',
    'findings': list([
      dict({
        'classification': 'needs_review',
        'kind': 'tiny_isolated_shape',
        'location': dict({
          'max_x': 270.0,
          'max_y': 27.0,
          'min_x': 250.0,
          'min_y': 19.8524,
        }),
        'measured_value': 0.015,
        'message': 'tiny isolated shape: path element 0, subpath 1 has area 0.015in², below the 0.02in² minimum shape area',
        'path_reference': dict({
          'element_index': 0,
          'id': None,
          'subpath_index': 1,
        }),
        'threshold': 0.02,
      }),
    ]),
    'reference_size_in': 3.0,
    'result': 'needs_review',
    'thresholds': dict({
      'accidental_dot_max_dimension_in': 0.2,
      'excessive_complexity_max_node_count': 300.0,
      'excessive_complexity_max_nodes_per_in': 11.0,
      'excessive_complexity_min_perimeter_in': 0.75,
      'narrow_feature_min_width_in': 0.1,
      'small_hole_min_area_in2': 0.02,
      'stray_object_off_canvas_tolerance_in': 0.01,
      'tiny_isolated_shape_min_area_in2': 0.02,
    }),
    'validated_file': 'bat-star-cut.svg',
  })
# ---
# name: test_findings_json_is_locked_by_snapshot[coralline_algae-coralline-algae-cut.svg]
  dict({
    'content_hash': 'c9e729d1088e93b96c4537130286c6d85e44898daf3e929e559f90cd23791acf',
    'findings': list([
      dict({
        'classification': 'needs_review',
        'kind': 'excessive_complexity',
        'location': dict({
          'max_x': 280.1764,
          'max_y': 280.5131,
          'min_x': 20.8288,
          'min_y': 20.8236,
        }),
        'measured_value': 13.4014,
        'message': 'excessive geometric complexity: path element 0, subpath 0 has 13.4014 nodes/in, above the 11.0 nodes/in threshold',
        'path_reference': dict({
          'element_index': 0,
          'id': None,
          'subpath_index': 0,
        }),
        'threshold': 11.0,
      }),
    ]),
    'reference_size_in': 3.0,
    'result': 'needs_review',
    'thresholds': dict({
      'accidental_dot_max_dimension_in': 0.2,
      'excessive_complexity_max_node_count': 300.0,
      'excessive_complexity_max_nodes_per_in': 11.0,
      'excessive_complexity_min_perimeter_in': 0.75,
      'narrow_feature_min_width_in': 0.1,
      'small_hole_min_area_in2': 0.02,
      'stray_object_off_canvas_tolerance_in': 0.01,
      'tiny_isolated_shape_min_area_in2': 0.02,
    }),
    'validated_file': 'coralline-algae-cut.svg',
  })
# ---
# name: test_findings_json_is_locked_by_snapshot[giant_green_anemone-giant-green-anemone-cut.svg]
  dict({
    'content_hash': 'c58ffd518711eb2289911355f1f94015a13da48765fa24b2a2fc17025a7c554d',
    'findings': list([
      dict({
        'classification': 'needs_review',
        'kind': 'disconnected_fragments',
        'location': dict({
          'max_x': 14.0,
          'max_y': 4.0,
          'min_x': 12.0,
          'min_y': 2.0,
        }),
        'measured_value': None,
        'message': "disconnected fragment: path element 0, subpath 1 is separate from the design's largest piece",
        'path_reference': dict({
          'element_index': 0,
          'id': None,
          'subpath_index': 1,
        }),
        'threshold': None,
      }),
    ]),
    'reference_size_in': 3.0,
    'result': 'needs_review',
    'thresholds': dict({
      'accidental_dot_max_dimension_in': 0.2,
      'excessive_complexity_max_node_count': 300.0,
      'excessive_complexity_max_nodes_per_in': 11.0,
      'excessive_complexity_min_perimeter_in': 0.75,
      'narrow_feature_min_width_in': 0.1,
      'small_hole_min_area_in2': 0.02,
      'stray_object_off_canvas_tolerance_in': 0.01,
      'tiny_isolated_shape_min_area_in2': 0.02,
    }),
    'validated_file': 'giant-green-anemone-cut.svg',
  })
# ---
# name: test_findings_json_is_locked_by_snapshot[gumboot_chiton-gumboot-chiton-cut.svg]
  dict({
    'content_hash': '526771f6aafe457dae0a8f5775938aefdfb540aedff07f4c6cec496a257cee48',
    'findings': list([
      dict({
        'classification': 'needs_review',
        'kind': 'accidental_dot',
        'location': dict({
          'max_x': 287.1629,
          'max_y': 27.1499,
          'min_x': 273.8683,
          'min_y': 13.9002,
        }),
        'measured_value': 0.1496,
        'message': 'accidental dot: path element 0, subpath 1 is only 0.1496in across, below the 0.2in dot threshold',
        'path_reference': dict({
          'element_index': 0,
          'id': None,
          'subpath_index': 1,
        }),
        'threshold': 0.2,
      }),
    ]),
    'reference_size_in': 3.0,
    'result': 'needs_review',
    'thresholds': dict({
      'accidental_dot_max_dimension_in': 0.2,
      'excessive_complexity_max_node_count': 300.0,
      'excessive_complexity_max_nodes_per_in': 11.0,
      'excessive_complexity_min_perimeter_in': 0.75,
      'narrow_feature_min_width_in': 0.1,
      'small_hole_min_area_in2': 0.02,
      'stray_object_off_canvas_tolerance_in': 0.01,
      'tiny_isolated_shape_min_area_in2': 0.02,
    }),
    'validated_file': 'gumboot-chiton-cut.svg',
  })
# ---
# name: test_findings_json_is_locked_by_snapshot[keyhole_limpet-keyhole-limpet-cut.svg]
  dict({
    'content_hash': '8e507d53b4799d2e88e5e4fad7971d2a5c2072c8da88a0aa59073bac14734ae4',
    'findings': list([
      dict({
        'classification': 'needs_review',
        'kind': 'small_hole',
        'location': dict({
          'max_x': 156.0,
          'max_y': 156.0,
          'min_x': 145.0,
          'min_y': 145.0,
        }),
        'measured_value': 0.0137,
        'message': 'very small hole: path element 0, subpath 1 has area 0.0137in², below the 0.02in² minimum hole area',
        'path_reference': dict({
          'element_index': 0,
          'id': None,
          'subpath_index': 1,
        }),
        'threshold': 0.02,
      }),
    ]),
    'reference_size_in': 3.0,
    'result': 'needs_review',
    'thresholds': dict({
      'accidental_dot_max_dimension_in': 0.2,
      'excessive_complexity_max_node_count': 300.0,
      'excessive_complexity_max_nodes_per_in': 11.0,
      'excessive_complexity_min_perimeter_in': 0.75,
      'narrow_feature_min_width_in': 0.1,
      'small_hole_min_area_in2': 0.02,
      'stray_object_off_canvas_tolerance_in': 0.01,
      'tiny_isolated_shape_min_area_in2': 0.02,
    }),
    'validated_file': 'keyhole-limpet-cut.svg',
  })
# ---
# name: test_findings_json_is_locked_by_snapshot[nudibranch-nudibranch-cut.svg]
  dict({
    'content_hash': '19b302fcd300549d6ec0a6046cb855bb107e4cefe52189c0979b0daf1140bdc1',
    'findings': list([
      dict({
        'classification': 'needs_review',
        'kind': 'narrow_feature',
        'location': dict({
          'max_x': 174.9315,
          'max_y': 153.7995,
          'min_x': 126.1223,
          'min_y': 147.0494,
        }),
        'measured_value': 0.0875,
        'message': 'narrow feature: path element 0, subpath 0 narrows to 0.0875in wide, below the 0.1in minimum feature width',
        'path_reference': dict({
          'element_index': 0,
          'id': None,
          'subpath_index': 0,
        }),
        'threshold': 0.1,
      }),
    ]),
    'reference_size_in': 3.0,
    'result': 'needs_review',
    'thresholds': dict({
      'accidental_dot_max_dimension_in': 0.2,
      'excessive_complexity_max_node_count': 300.0,
      'excessive_complexity_max_nodes_per_in': 11.0,
      'excessive_complexity_min_perimeter_in': 0.75,
      'narrow_feature_min_width_in': 0.1,
      'small_hole_min_area_in2': 0.02,
      'stray_object_off_canvas_tolerance_in': 0.01,
      'tiny_isolated_shape_min_area_in2': 0.02,
    }),
    'validated_file': 'nudibranch-cut.svg',
  })
# ---
# name: test_findings_json_is_locked_by_snapshot[ochre_sea_star-ochre-sea-star-cut.svg]
  dict({
    'content_hash': '3fd17cbdb63411e1d243b0aadb2b6fe858240b902185bb4d1daec6c74357ec73',
    'findings': list([
    ]),
    'reference_size_in': 3.0,
    'result': 'pass',
    'thresholds': dict({
      'accidental_dot_max_dimension_in': 0.2,
      'excessive_complexity_max_node_count': 300.0,
      'excessive_complexity_max_nodes_per_in': 11.0,
      'excessive_complexity_min_perimeter_in': 0.75,
      'narrow_feature_min_width_in': 0.1,
      'small_hole_min_area_in2': 0.02,
      'stray_object_off_canvas_tolerance_in': 0.01,
      'tiny_isolated_shape_min_area_in2': 0.02,
    }),
    'validated_file': 'ochre-sea-star-cut.svg',
  })
# ---
# name: test_findings_json_is_locked_by_snapshot[owl_limpet-owl-limpet-cut.svg]
  dict({
    'content_hash': '924c2319b1c4eb0b36fe3476d1e9ea4aa3e595f267840c41251cd06762e47973',
    'findings': list([
      dict({
        'classification': 'needs_review',
        'kind': 'disconnected_fragments',
        'location': dict({
          'max_x': 93.2,
          'max_y': 57.353,
          'min_x': 75.8667,
          'min_y': 39.678,
        }),
        'measured_value': None,
        'message': "disconnected fragment: path element 0, subpath 1 is separate from the design's largest piece",
        'path_reference': dict({
          'element_index': 0,
          'id': None,
          'subpath_index': 1,
        }),
        'threshold': None,
      }),
    ]),
    'reference_size_in': 3.0,
    'result': 'needs_review',
    'thresholds': dict({
      'accidental_dot_max_dimension_in': 0.2,
      'excessive_complexity_max_node_count': 300.0,
      'excessive_complexity_max_nodes_per_in': 11.0,
      'excessive_complexity_min_perimeter_in': 0.75,
      'narrow_feature_min_width_in': 0.1,
      'small_hole_min_area_in2': 0.02,
      'stray_object_off_canvas_tolerance_in': 0.01,
      'tiny_isolated_shape_min_area_in2': 0.02,
    }),
    'validated_file': 'owl-limpet-cut.svg',
  })
# ---
# name: test_findings_json_is_locked_by_snapshot[purple_sea_urchin-purple-sea-urchin-cut.svg]
  dict({
    'content_hash': '6f7cb86dd77c218f8047d5222f8238cf3a09fa6e9c468bb3d874eeb0e882c73e',
    'findings': list([
    ]),
    'reference_size_in': 3.0,
    'result': 'pass',
    'thresholds': dict({
      'accidental_dot_max_dimension_in': 0.2,
      'excessive_complexity_max_node_count': 300.0,
      'excessive_complexity_max_nodes_per_in': 11.0,
      'excessive_complexity_min_perimeter_in': 0.75,
      'narrow_feature_min_width_in': 0.1,
      'small_hole_min_area_in2': 0.02,
      'stray_object_off_canvas_tolerance_in': 0.01,
      'tiny_isolated_shape_min_area_in2': 0.02,
    }),
    'validated_file': 'purple-sea-urchin-cut.svg',
  })
# ---
# name: test_findings_json_is_locked_by_snapshot[turban_snail-turban-snail-cut.svg]
  dict({
    'content_hash': 'e79374b5b9e4f445ead1200619ac8f3f2754d246373843271840973980bd10a9',
    'findings': list([
    ]),
    'reference_size_in': 3.0,
    'result': 'pass',
    'thresholds': dict({
      'accidental_dot_max_dimension_in': 0.2,
      'excessive_complexity_max_node_count': 300.0,
      'excessive_complexity_max_nodes_per_in': 11.0,
      'excessive_complexity_min_perimeter_in': 0.75,
      'narrow_feature_min_width_in': 0.1,
      'small_hole_min_area_in2': 0.02,
      'stray_object_off_canvas_tolerance_in': 0.01,
      'tiny_isolated_shape_min_area_in2': 0.02,
    }),
    'validated_file': 'turban-snail-cut.svg',
  })
# ---
# name: test_product_size_findings_json_is_locked_by_snapshot[bat_star-bat-star-cut.svg]
  dict({
    'content_hash': '0f7a670a7aeb86ed02766a0f4b387d7fd5663043ab1c12b4d015aaa64be00186',
    'findings': list([
      dict({
        'classification': 'needs_review',
        'kind': 'accidental_dot',
        'location': dict({
          'max_x': 270.0,
          'max_y': 27.0,
          'min_x': 250.0,
          'min_y': 19.8524,
        }),
        'measured_value': 0.0768,
        'message': 'accidental dot: path element 0, subpath 1 is only 0.0768in across, below the 0.2in dot threshold',
        'path_reference': dict({
          'element_index': 0,
          'id': None,
          'subpath_index': 1,
        }),
        'threshold': 0.2,
      }),
    ]),
    'reference_size_in': 1.0,
    'result': 'needs_review',
    'thresholds': dict({
      'accidental_dot_max_dimension_in': 0.2,
      'excessive_complexity_max_node_count': 300.0,
      'excessive_complexity_max_nodes_per_in': 11.0,
      'excessive_complexity_min_perimeter_in': 0.75,
      'narrow_feature_min_width_in': 0.1,
      'small_hole_min_area_in2': 0.02,
      'stray_object_off_canvas_tolerance_in': 0.01,
      'tiny_isolated_shape_min_area_in2': 0.02,
    }),
    'validated_file': 'bat-star-cut.svg',
  })
# ---
# name: test_product_size_findings_json_is_locked_by_snapshot[coralline_algae-coralline-algae-cut.svg]
  dict({
    'content_hash': 'c9e729d1088e93b96c4537130286c6d85e44898daf3e929e559f90cd23791acf',
    'findings': list([
      dict({
        'classification': 'needs_review',
        'kind': 'excessive_complexity',
        'location': dict({
          'max_x': 280.1764,
          'max_y': 280.5131,
          'min_x': 20.8288,
          'min_y': 20.8236,
        }),
        'measured_value': 40.2041,
        'message': 'excessive geometric complexity: path element 0, subpath 0 has 40.2041 nodes/in, above the 11.0 nodes/in threshold',
        'path_reference': dict({
          'element_index': 0,
          'id': None,
          'subpath_index': 0,
        }),
        'threshold': 11.0,
      }),
    ]),
    'reference_size_in': 1.0,
    'result': 'needs_review',
    'thresholds': dict({
      'accidental_dot_max_dimension_in': 0.2,
      'excessive_complexity_max_node_count': 300.0,
      'excessive_complexity_max_nodes_per_in': 11.0,
      'excessive_complexity_min_perimeter_in': 0.75,
      'narrow_feature_min_width_in': 0.1,
      'small_hole_min_area_in2': 0.02,
      'stray_object_off_canvas_tolerance_in': 0.01,
      'tiny_isolated_shape_min_area_in2': 0.02,
    }),
    'validated_file': 'coralline-algae-cut.svg',
  })
# ---
# name: test_product_size_findings_json_is_locked_by_snapshot[giant_green_anemone-giant-green-anemone-cut.svg]
  dict({
    'content_hash': 'c58ffd518711eb2289911355f1f94015a13da48765fa24b2a2fc17025a7c554d',
    'findings': list([
      dict({
        'classification': 'needs_review',
        'kind': 'accidental_dot',
        'location': dict({
          'max_x': 14.0,
          'max_y': 4.0,
          'min_x': 12.0,
          'min_y': 2.0,
        }),
        'measured_value': 0.1667,
        'message': 'accidental dot: path element 0, subpath 1 is only 0.1667in across, below the 0.2in dot threshold',
        'path_reference': dict({
          'element_index': 0,
          'id': None,
          'subpath_index': 1,
        }),
        'threshold': 0.2,
      }),
    ]),
    'reference_size_in': 1.0,
    'result': 'needs_review',
    'thresholds': dict({
      'accidental_dot_max_dimension_in': 0.2,
      'excessive_complexity_max_node_count': 300.0,
      'excessive_complexity_max_nodes_per_in': 11.0,
      'excessive_complexity_min_perimeter_in': 0.75,
      'narrow_feature_min_width_in': 0.1,
      'small_hole_min_area_in2': 0.02,
      'stray_object_off_canvas_tolerance_in': 0.01,
      'tiny_isolated_shape_min_area_in2': 0.02,
    }),
    'validated_file': 'giant-green-anemone-cut.svg',
  })
# ---
# name: test_product_size_findings_json_is_locked_by_snapshot[gumboot_chiton-gumboot-chiton-cut.svg]
  dict({
    'content_hash': '526771f6aafe457dae0a8f5775938aefdfb540aedff07f4c6cec496a257cee48',
    'findings': list([
      dict({
        'classification': 'needs_review',
        'kind': 'accidental_dot',
        'location': dict({
          'max_x': 287.1629,
          'max_y': 27.1499,
          'min_x': 273.8683,
          'min_y': 13.9002,
        }),
        'measured_value': 0.0499,
        'message': 'accidental dot: path element 0, subpath 1 is only 0.0499in across, below the 0.2in dot threshold',
        'path_reference': dict({
          'element_index': 0,
          'id': None,
          'subpath_index': 1,
        }),
        'threshold': 0.2,
      }),
    ]),
    'reference_size_in': 1.0,
    'result': 'needs_review',
    'thresholds': dict({
      'accidental_dot_max_dimension_in': 0.2,
      'excessive_complexity_max_node_count': 300.0,
      'excessive_complexity_max_nodes_per_in': 11.0,
      'excessive_complexity_min_perimeter_in': 0.75,
      'narrow_feature_min_width_in': 0.1,
      'small_hole_min_area_in2': 0.02,
      'stray_object_off_canvas_tolerance_in': 0.01,
      'tiny_isolated_shape_min_area_in2': 0.02,
    }),
    'validated_file': 'gumboot-chiton-cut.svg',
  })
# ---
# name: test_product_size_findings_json_is_locked_by_snapshot[keyhole_limpet-keyhole-limpet-cut.svg]
  dict({
    'content_hash': '8e507d53b4799d2e88e5e4fad7971d2a5c2072c8da88a0aa59073bac14734ae4',
    'findings': list([
      dict({
        'classification': 'needs_review',
        'kind': 'small_hole',
        'location': dict({
          'max_x': 156.0,
          'max_y': 156.0,
          'min_x': 145.0,
          'min_y': 145.0,
        }),
        'measured_value': 0.0015,
        'message': 'very small hole: path element 0, subpath 1 has area 0.0015in², below the 0.02in² minimum hole area',
        'path_reference': dict({
          'element_index': 0,
          'id': None,
          'subpath_index': 1,
        }),
        'threshold': 0.02,
      }),
    ]),
    'reference_size_in': 1.0,
    'result': 'needs_review',
    'thresholds': dict({
      'accidental_dot_max_dimension_in': 0.2,
      'excessive_complexity_max_node_count': 300.0,
      'excessive_complexity_max_nodes_per_in': 11.0,
      'excessive_complexity_min_perimeter_in': 0.75,
      'narrow_feature_min_width_in': 0.1,
      'small_hole_min_area_in2': 0.02,
      'stray_object_off_canvas_tolerance_in': 0.01,
      'tiny_isolated_shape_min_area_in2': 0.02,
    }),
    'validated_file': 'keyhole-limpet-cut.svg',
  })
# ---
# name: test_product_size_findings_json_is_locked_by_snapshot[nudibranch-nudibranch-cut.svg]
  dict({
    'content_hash': '19b302fcd300549d6ec0a6046cb855bb107e4cefe52189c0979b0daf1140bdc1',
    'findings': list([
      dict({
        'classification': 'needs_review',
        'kind': 'narrow_feature',
        'location': dict({
          'max_x': 175.4507,
          'max_y': 153.7995,
          'min_x': 125.6031,
          'min_y': 147.5686,
        }),
        'measured_value': 0.025,
        'message': 'narrow feature: path element 0, subpath 0 narrows to 0.025in wide, below the 0.1in minimum feature width',
        'path_reference': dict({
          'element_index': 0,
          'id': None,
          'subpath_index': 0,
        }),
        'threshold': 0.1,
      }),
    ]),
    'reference_size_in': 1.0,
    'result': 'needs_review',
    'thresholds': dict({
      'accidental_dot_max_dimension_in': 0.2,
      'excessive_complexity_max_node_count': 300.0,
      'excessive_complexity_max_nodes_per_in': 11.0,
      'excessive_complexity_min_perimeter_in': 0.75,
      'narrow_feature_min_width_in': 0.1,
      'small_hole_min_area_in2': 0.02,
      'stray_object_off_canvas_tolerance_in': 0.01,
      'tiny_isolated_shape_min_area_in2': 0.02,
    }),
    'validated_file': 'nudibranch-cut.svg',
  })
# ---
# name: test_product_size_findings_json_is_locked_by_snapshot[ochre_sea_star-ochre-sea-star-cut.svg]
  dict({
    'content_hash': '3fd17cbdb63411e1d243b0aadb2b6fe858240b902185bb4d1daec6c74357ec73',
    'findings': list([
    ]),
    'reference_size_in': 1.0,
    'result': 'pass',
    'thresholds': dict({
      'accidental_dot_max_dimension_in': 0.2,
      'excessive_complexity_max_node_count': 300.0,
      'excessive_complexity_max_nodes_per_in': 11.0,
      'excessive_complexity_min_perimeter_in': 0.75,
      'narrow_feature_min_width_in': 0.1,
      'small_hole_min_area_in2': 0.02,
      'stray_object_off_canvas_tolerance_in': 0.01,
      'tiny_isolated_shape_min_area_in2': 0.02,
    }),
    'validated_file': 'ochre-sea-star-cut.svg',
  })
# ---
# name: test_product_size_findings_json_is_locked_by_snapshot[owl_limpet-owl-limpet-cut.svg]
  dict({
    'content_hash': '924c2319b1c4eb0b36fe3476d1e9ea4aa3e595f267840c41251cd06762e47973',
    'findings': list([
      dict({
        'classification': 'needs_review',
        'kind': 'accidental_dot',
        'location': dict({
          'max_x': 93.2,
          'max_y': 57.353,
          'min_x': 75.8667,
          'min_y': 39.678,
        }),
        'measured_value': 0.1933,
        'message': 'accidental dot: path element 0, subpath 1 is only 0.1933in across, below the 0.2in dot threshold',
        'path_reference': dict({
          'element_index': 0,
          'id': None,
          'subpath_index': 1,
        }),
        'threshold': 0.2,
      }),
    ]),
    'reference_size_in': 1.0,
    'result': 'needs_review',
    'thresholds': dict({
      'accidental_dot_max_dimension_in': 0.2,
      'excessive_complexity_max_node_count': 300.0,
      'excessive_complexity_max_nodes_per_in': 11.0,
      'excessive_complexity_min_perimeter_in': 0.75,
      'narrow_feature_min_width_in': 0.1,
      'small_hole_min_area_in2': 0.02,
      'stray_object_off_canvas_tolerance_in': 0.01,
      'tiny_isolated_shape_min_area_in2': 0.02,
    }),
    'validated_file': 'owl-limpet-cut.svg',
  })
# ---
# name: test_product_size_findings_json_is_locked_by_snapshot[purple_sea_urchin-purple-sea-urchin-cut.svg]
  dict({
    'content_hash': '6f7cb86dd77c218f8047d5222f8238cf3a09fa6e9c468bb3d874eeb0e882c73e',
    'findings': list([
    ]),
    'reference_size_in': 1.0,
    'result': 'pass',
    'thresholds': dict({
      'accidental_dot_max_dimension_in': 0.2,
      'excessive_complexity_max_node_count': 300.0,
      'excessive_complexity_max_nodes_per_in': 11.0,
      'excessive_complexity_min_perimeter_in': 0.75,
      'narrow_feature_min_width_in': 0.1,
      'small_hole_min_area_in2': 0.02,
      'stray_object_off_canvas_tolerance_in': 0.01,
      'tiny_isolated_shape_min_area_in2': 0.02,
    }),
    'validated_file': 'purple-sea-urchin-cut.svg',
  })
# ---
# name: test_product_size_findings_json_is_locked_by_snapshot[turban_snail-turban-snail-cut.svg]
  dict({
    'content_hash': 'e79374b5b9e4f445ead1200619ac8f3f2754d246373843271840973980bd10a9',
    'findings': list([
      dict({
        'classification': 'needs_review',
        'kind': 'small_hole',
        'location': dict({
          'max_x': 162.9661,
          'max_y': 162.9915,
          'min_x': 137.9021,
          'min_y': 137.9052,
        }),
        'measured_value': 0.0074,
        'message': 'very small hole: path element 0, subpath 1 has area 0.0074in², below the 0.02in² minimum hole area',
        'path_reference': dict({
          'element_index': 0,
          'id': None,
          'subpath_index': 1,
        }),
        'threshold': 0.02,
      }),
    ]),
    'reference_size_in': 1.0,
    'result': 'needs_review',
    'thresholds': dict({
      'accidental_dot_max_dimension_in': 0.2,
      'excessive_complexity_max_node_count': 300.0,
      'excessive_complexity_max_nodes_per_in': 11.0,
      'excessive_complexity_min_perimeter_in': 0.75,
      'narrow_feature_min_width_in': 0.1,
      'small_hole_min_area_in2': 0.02,
      'stray_object_off_canvas_tolerance_in': 0.01,
      'tiny_isolated_shape_min_area_in2': 0.02,
    }),
    'validated_file': 'turban-snail-cut.svg',
  })
# ---
